error message display

--- a/static/sass/components/_component.subscription.scss
+++ b/static/sass/components/_component.subscription.scss
@@ -521,6 +521,8 @@
             .errorText { 
                 font-weight: bold;
                 color: red;
+                margin-top: 10px;
+                font-size: 13px;
             }
             .input {
                 &__label {
