--- a/layouts/main.twig
+++ b/layouts/main.twig
@@ -150,17 +150,30 @@
 
     {% if googleAnalyitcsId is defined and googleAnalyitcsId is not empty%}
     <!-- Google Analytics u -->
-    <script>
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        {% if googleAnalyitcsId | split("-")[0] == "UA" %}
+            <script>
+                (function (i, s, o, g, r, a, m) {
+                    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                        (i[r].q = i[r].q || []).push(arguments)
+                    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                        m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+                })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-        ga('create', '{{googleAnalyitcsId}}', 'auto');
-        ga('send', 'pageview');
-    </script>
+                ga('create', '{{googleAnalyitcsId}}', 'auto');
+                ga('send', 'pageview');
+            </script>
+        {% elseif googleAnalyitcsId | split("-")[0] == "G" %}
+            <!-- Google tag (gtag.js) -->
+            <script async src="https://www.googletagmanager.com/gtag/js?id={{googleAnalyitcsId}}"></script>
+            <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', '{{googleAnalyitcsId}}');
+            </script>
+        {% endif %}
+    
     <!-- End Google Analytics -->
     {% endif %}
 
@@ -182,7 +195,6 @@
 
 
 <body class="body {{ layout }} {{ pageClass }} {% if this.params['customClass'] is defined %}{{this.params['customClass'] }}{% endif %}" data-class="{{ pageClass | split(' ')[0] }}" data-networkid="{{networkData['id']}}" data-v="28">
-
     {{ this.beginBody() }}
     <div id="idempotency_key" class="u-hide" >{{_AppHelper.getStripeIdempotencyKey()}}</div>
 
