--- a/render.twig
+++ b/render.twig
@@ -49,6 +49,7 @@
         site            : site,
         networkData     : networkData,
         blogData        : blogData,
+        cardLayout      : config.cardLayout is defined ? config.cardLayout : '',
         blogLayout      : config.blogLayout is defined ? config.blogLayout : '',
         background      : config.background is defined ? config.background : '',
         adslots         : config.adslots is defined ? config.adslots : [],
