--- a/partials/panels/section-00.twig
+++ b/partials/panels/section-00.twig
@@ -1,6 +1,13 @@
 {% set articleCount = 0 %}
 {% set cardIndex = 0 %}
 
+{% set cardLayoutInfo = '' %}
+{% set articleLayoutInfo = '../_single-article.twig' %}
+{% if cardLayout is defined and cardLayout is not empty and cardLayout == 'version2' %}
+    {% set cardLayoutInfo = 'card__version2' %}
+    {% set articleLayoutInfo = '../_single-article-v2.twig' %}
+{% endif %}
+
 <div class="row" data-section="00">
     <div class="col hm-sec1">
         <div class="c-cards-container c-cards-container-xs bottom-border hm-sec1_row_1 hm-firstRow">
@@ -8,22 +15,10 @@
                 {% for i in 0..3 if articles[articleCount] %}
 
                 <div class="col-12 col-lg-3 left-border">
-                    {{this.render('../_single-article.twig', {
+                    {{this.render(articleLayoutInfo, {
                         article: articles[articleCount],
                         position: (articleCount+1),
-                        imageSize: {width: 459, height: 278},
-                        imageSizes: {
-                            "mobile": {
-                                width: 550, height: 333
-                            },
-                            "mobileLrg": {
-                                width: 550, height: 333
-                            },
-                            "tablet": {
-                                width: 703, height: 425
-                            }
-                        }, 
-                        containerClass: "card-1-mobile card-1-tablet card-1-desktop",
+                        containerClass: "card-1-mobile card-1-tablet card-1-desktop "~cardLayoutInfo,
                         timeSuppress: timeSuppress
                     }) | raw}}
                     {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -35,11 +30,7 @@
         <div class="c-cards-container c-cards-container-xs bottom-border hm-sec1_row_2">
             <div class="row">
                 <div class="col-12 col-lg-3 left-border hm-sec1_row_2_c1">
-                    {% for i in 4..5 if articles[articleCount] %}
-                        {{this.render('../_single-article.twig', {
-                            article: articles[articleCount],
-                            position: (articleCount+1),
-                            imageSize: {width: 459, height: 278},
+                {# imageSize: {width: 459, height: 278},
                             imageSizes: {
                                 "mobile": {
                                     width: 550, height: 333
@@ -50,8 +41,12 @@
                                 "tablet": {
                                     width: 703, height: 425
                                 }
-                            }, 
-                            containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription card--verticalMulti card--verticalMulti-xs",
+                            },  #}
+                    {% for i in 4..5 if articles[articleCount] %}
+                        {{this.render(articleLayoutInfo, {
+                            article: articles[articleCount],
+                            position: (articleCount+1),
+                            containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription card--verticalMulti card--verticalMulti-xs "~cardLayoutInfo,
                             timeSuppress: timeSuppress
                         }) | raw}}
                         {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -60,10 +55,7 @@
 
                 {% if articles[articleCount] %}
                     <div class="col-12 col-lg-6 left-border hm-sec1_row_2_c2">
-                        {{this.render('../_single-article.twig', {
-                            article: articles[articleCount],
-                            position: (articleCount+1),
-                            imageSize: {width: 950, height: 675},
+                    {# imageSize: {width: 950, height: 675},
                             imageSizes: {
                                 "mobile": {
                                     width: 635, height:450
@@ -74,8 +66,11 @@
                                 "tablet" : {
                                     width: 950, height:675
                                 }
-                            },
-                            containerClass: "card-2-mobile card-2-tablet card-5-desktop card-5-text-center",
+                            }, #}
+                        {{this.render(articleLayoutInfo, {
+                            article: articles[articleCount],
+                            position: (articleCount+1),
+                            containerClass: "card-2-mobile card-2-tablet card-5-desktop card-5-text-center "~cardLayoutInfo,
                             timeSuppress: timeSuppress
                         }) | raw}}
                         {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -84,22 +79,10 @@
 
                 {% if articles[articleCount] %}
                     <div class="col-12 col-lg-3 left-border hm-sec1_row_2_c3">
-                        {{this.render('../_single-article.twig', {
+                        {{this.render(articleLayoutInfo, {
                             article: articles[articleCount],
                             position: (articleCount+1),
-                            imageSize: {width: 459, height: 278},
-                            imageSizes: {
-                                "mobile": {
-                                    width: 550, height: 333
-                                },
-                                "mobileLrg": {
-                                    width: 550, height: 333
-                                },
-                                "tablet": {
-                                    width: 703, height: 425
-                                }
-                            }, 
-                            containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription card--verticalMulti card--verticalMulti-xs",
+                            containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription card--verticalMulti card--verticalMulti-xs "~cardLayoutInfo,
                             timeSuppress: timeSuppress
                         }) | raw}}
                         {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -119,21 +102,9 @@
             <div class="row">
                 {% for i in 8..11 if articles[articleCount] %}
                     <div class="col-12 col-lg-3 left-border">
-                        {{this.render('../_single-article.twig', {
+                        {{this.render(articleLayoutInfo, {
                             article: articles[articleCount],
                             position: (articleCount+1),
-                            imageSize: {width: 459, height: 278},
-                            imageSizes: {
-                                "mobile": {
-                                    width: 550, height: 333
-                                },
-                                "mobileLrg": {
-                                    width: 550, height: 333
-                                },
-                                "tablet": {
-                                    width: 703, height: 425
-                                }
-                            }, 
                             containerClass: "card-2-mobile card-2--noDescription card-2-tablet card-4-desktop",
                             timeSuppress: timeSuppress
                         }) | raw}}
